# sam3-poc

./: .gitignore  README.md  coco_predictions_bbox.json  coco_predictions_polygons_from_bbox_run.json  pyproject.toml  requirements.txt
config/: pipeline.example.yaml  pipeline.yaml
scripts/: coco_predictions_rle_to_polygons.py  generate_sam3_train_config.py  prepare_sam3_dataset.py  run_all_sam3_finetune.sh  run_polygon_inference_check.sh  run_sam3_train.sh  sam3_ft_inference_vis_polygons.py
src/sam3_prelabel/: __init__.py  cli.py  coco_exporter.py  config.py  pipeline.py  roboflow_runner.py  sam3_runner.py
